--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@
 
 title: Дилетанская озвучка
 # email: your-email@example.com
-description: DIY - озвучка на диване, преимущественно работ, связанных с анархизмом
+description: DIY — озвучка на диване, преимущественно работ, связанных с анархизмом
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://amateur-voiceover.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 
